修正了媒体查询

--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
 	</nav>
 	<div class="content">
 		<div class="row fadeInLeft animDelay02 tc-1 animated">
-			<h1 class="TXT_center">Cmd Markdown</h1>
+			<div class="col-sm-12 col-xs-12">
+				<h1 style="font-size: 9vw;text-align: center;">Cmd Markdown</h1>
+			</div>
 		</div>
 	<div class="row fadeIn animDelay1 tc-1 animated">
-			<h2 style="font-size:40px;width:100%">开启卓越写作之旅</h2>
+			<h2 style="font-size: 5vw">开启卓越写作之旅</h2>
 		</div>
 	<br><br><br>
 	<div class="row">
@@ -59,20 +61,19 @@
 				<ul class="top-menu menu">
 					<li><a href="#">开始写作</a></li>
 					<li><a href="#">下载客户端</a></li>
-					<li><a href="#">了解Markdown语言</a></li>
 					<div class="clear"></div>
 				</ul>
 		</div>
 		</div>		
 	</div>
 	<div class="row Markdown_language padding_Top_Left">
-		<div class="col-sm-4">
+		<div class="col-sm-4 col-xs-12 no-padding">
 			<img src="./images/Article.png">
 		</div>
-		<div class="col-sm-4">
+		<div class="col-sm-4 col-xs-12 no-padding">
 			<img src="./images/code.png">
 		</div>
-		<div class="col-sm-4">
+		<div class="col-sm-4 col-xs-12 no-padding">
 			<img src="./images/MathExpression.png">
 		</div>
 	</div>
@@ -94,7 +95,7 @@
 	</div>
 	<div class="row Markdown_language padding_Top_Left">
 		
-		<div class="col-sm-12">
+		<div class="col-sm-12 col-xs-12 no-padding">
 			<img src="./images/preview.png">
 		</div>
 	</div>
@@ -137,7 +138,7 @@
 	</div>
 	<div class="row Markdown_language padding_Top_Left">
 		
-		<div class="col-sm-12">
+		<div class="col-sm-12 col-xs-12 no-padding">
 			<img src="./images/sync.png">
 		</div>
 	</div>
@@ -159,7 +160,7 @@
 	</div>
 	<div class="row Markdown_language padding_Top_Left">
 		
-		<div class="col-sm-12">
+		<div class="col-sm-12 col-xs-12 no-padding">
 			<img src="./images/PublishContent.png">
 		</div>
 	</div>
@@ -181,18 +182,20 @@
 	</div>
 	<div class="row Markdown_language padding_Top_Left">
 		
-		<div class="col-sm-12">
+		<div class="col-sm-12 col-xs-12 no-padding">
 			<img src="./images/side-remark.png">
 		</div>
 	</div>
 </div>
 <footer>
-	<div class="row padding_Top_Left">
-		<h1 class="TXT_center">全平台客户端</h1>
+	<div class="row ">
+		<h1 class="TXT_center" style="color: #fff">全平台客户端</h1>
+		<div class="col-sm-12 col-xs-12">
 		<p class="P_center">支持 <span class="b">Linux、</span> <span class="b">Mac、</span><span class="b">Windows</span>三大平台，轻松选择适合你的客户端 </p>
-		<div class="container">
-			<div class="row padding_Top_Left">
-				<div class="col-sm-4 TXT_center">
+		</div>
+		<div class="container footer-margin">
+			<div class="row ">
+				<div class="col-sm-4 col-xs-12 TXT_center">
 					<div class="circle_ico ">
 						<img src="./images/linux.png">
 					</div>
@@ -200,7 +203,7 @@
 					<button class="btn">Linux 64位</button>
 					<button class="btn">Linux 32位</button>
 				</div>
-				<div class="col-sm-4 TXT_center">
+				<div class="col-sm-4 col-xs-12 TXT_center">
 					<div class="circle_ico ">
 						<img src="./images/apple.png">
 					</div>
@@ -208,7 +211,7 @@
 					<button class="btn">Mac 64位</button>
 					<button class="btn">Mac 32位</button>
 				</div>
-				<div class="col-sm-4 TXT_center">
+				<div class="col-sm-4 col-xs-12 TXT_center">
 					<div class="circle_ico ">
 						<img src="./images/windows.png">
 					</div>
@@ -217,8 +220,9 @@
 					<button class="btn">Windows 32位</button>
 				</div>
 			</div>
-			<div class="row padding_Top_Left">
-				<div class="col-sm-12 TXT_center">
+			<br><br>
+			<div class="row">
+				<div class="col-sm-12 col-xs-12 TXT_center">
 					<div class="circle_ico ">
 						<img src="./images/web.png">
 					</div>
@@ -228,6 +232,7 @@
 			</div>
 		</div>
 	</div>
+	<br><br>
 </footer>
 </body>
 </html>
